--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
 {
     <div class="text-center">
         <h1 class="display-4">Chat Rooms</h1>
-        <p>There are no chat rooms created, please create one.</p>
+        <p>There is only one chat room created, select it from the top of the page.</p>
     </div>
 }
 else
 {
     <div class="text-center">
         <h1 class="display-4">Welcome</h1>
-        <p>In this test application you can talk with other people, just register or log in to start.</p>
+        <p>In this test application you can talk with other people, Register or log in to start.</p>
     </div>
 }
