--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@model List<ChatRoomListModel>
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @{
     ViewData["Title"] = "Home Page";
@@ -6,10 +7,58 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    string homeMessage = Model.Count == 0 ? "There are no channels created, you can create one so others can connect." : "You can select a channel from below and start talkin with other people.";
+
     <div class="text-center">
         <h1 class="display-4">Chat Rooms</h1>
-        <p>There is only one chat room created, select it from the top of the page.</p>
+        <p>@homeMessage</p>
     </div>
+
+
+    <div class="row">
+        <div class="col-10 offset-1">
+            <div class="row">
+                <div class="col-3 text-center room-selector" onclick="createRoom()">
+                    <b style="font-size:20px;">CREATE NEW ROOM</b>
+                </div>
+                @{
+                    int index = 1;
+                    foreach(var C in Model)
+                    {
+                        string roomUrl = Url.Action("Index", "Room", new { roomName = C.Name });
+
+                        <div class="col-3 @(index == 0 ? "":"offset-1") text-center room-selector" onclick="joinRoom('@roomUrl')">
+                            <b style="font-size:20px;">@C.Name</b>
+                        </div>
+
+                        index = index >= 2 ? 0 : ++index;
+                    }
+                }
+            </div>
+        </div>
+    </div>
+
+        <!-- Modal -->
+    <div class="modal fade bootstrap" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Create Room</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="newModalNameTxt" style="width:100%"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" onclick="sendCreateRoom()">Create</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+    
 }
 else
 {
@@ -18,3 +67,30 @@ else
         <p>In this test application you can talk with other people, Register or log in to start.</p>
     </div>
 }
+
+<script>
+    function joinRoom(roomUrl){
+        location.href = roomUrl;
+    }
+
+    function createRoom(){
+        $('#myModal').modal('toggle')
+    }
+
+    function sendCreateRoom(){
+        var roomName = $("#newModalNameTxt").val();
+
+        $.ajax({
+            method: 'POST',
+            url: '/Room/CreateRoom',
+            cache: false,
+            data: { newRoomName: roomName}
+        }).done(function(response) {
+            if(response != "success"){
+                alert(response);
+            }else{
+                location.reload();
+            }
+        });
+    }
+</script>
