--- a/WebApplication/wwwroot/css/site.css
+++ b/WebApplication/wwwroot/css/site.css
@@ -69,3 +69,11 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.room-selector {
+    border: 2px solid #9ad39c;
+    height: 100px;
+    padding: 25px;
+    cursor: pointer;
+    margin-top: 50px;
+}
