apply auto db-migration and Kiwi post saves on database

--- a/WebApplication/Views/Room/Index.cshtml
+++ b/WebApplication/Views/Room/Index.cshtml
@@ -42,6 +42,22 @@
                             </div>
                         </div>
                     }
+                    else if(M.SenderName == "Kiwi")
+                    {
+                        <div class='row'>
+                            <div class='col-6 border border-success'>
+                                <div class='row'>
+                                    <div class='col-1'> 
+                                        <img style='width:200%' src='/Images/kiwiImage.png'/>
+                                    </div>
+                                    <div class='col-11'>
+                                        <div><b>@M.SenderName</b></div>
+                                        <div>@M.Message</div>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    }
                     else
                     {
                         <div class="row">
